--- a/dockmetrix-utility/privacy-policy/index.html
+++ b/dockmetrix-utility/privacy-policy/index.html
@@ -44,6 +44,7 @@
     <li>Device ID (used for device-based access control)</li>
     <li>Company Information (if provided)</li>
     <li>No sensitive or financial data is collected</li>
+    <li>We DO NOT collect or store location, contacts, camera, microphone, or photo library data.</li>
   </ul>
 
   <h2>2. How We Use Your Information</h2>
@@ -55,21 +56,32 @@
   </ul>
 
   <h2>3. Data Sharing</h2>
-  <p>We do not share your data with any third-party service providers, advertisers, or marketers. All data is stored securely in Firebase and Supabase backends, used solely for internal functionality.</p>
+  <p>We do not share your data with any third-party service providers, advertisers, or marketers. All data is stored securely in Firebase and Supabase backends, used solely for internal functionality basically just for your login flow we dont use it for any other purposes say marketing etc. These services comply with industry standard security practices.</p>
+<p>We do not share your data even with Apple or any third-party service providers, advertisers, or marketers for advertising or analytics.</p>
 
   <h2>4. Data Security</h2>
   <p>We use secure authentication and encrypted storage mechanisms. Device verification and user validation are enforced to prevent unauthorized access.</p>
+<p>All Data is stored in secure databases hosted by Firebase (Google) and supabase backend infrastructure, with encrypted access and authentication mechanisms.</p>
 
-  <h2>5. Account & Access Control</h2>
+<h2>5 App Permissions</h2>
+  <p>DockMetrix Utility requests bare minimum limited permissions only for login authentication and device based access. The app does NOT access your camera, microphone, location or media storage at any time.</p>
+
+
+  <h2>6. Account & Access Control</h2>
   <p>Each user is permitted to use the app on one device at a time. If you change your device, you must log out first or contact support to regain access.</p>
+<p>You may also request account deletion by emailing us or using the "Delete Account" option inside the app under Contact Section/Menu.</p>
 
-  <h2>6. Data Retention</h2>
+<h2>7. Data Retention</h2>
   <p>We retain your account information for as long as your subscription is active or until you request account deletion.</p>
 
-  <h2>7. Changes to Policy</h2>
+
+  <h2>8. Sharing Functionality</h2>
+  <p>The app allows users to share screenshots of the app functionalities/tools/calculators results or summaries generated within the app. These are stored temporarily only when user initiates the action by share button within the app screens. WE STRICTLY DO NOT ACCESS YOUR MEDIA OR PHOTOS UNDER ANY CIRCUMSTANCES.</p>
+
+  <h2>9. Changes to Policy</h2>
   <p>We may update this policy from time to time. Updates will be posted on this page, and users will be notified where applicable.</p>
 
-  <h2>8. Contact Us</h2>
+  <h2>10. Contact Us</h2>
   <p>If you have questions about this policy or need support, contact us at:  
     <br><strong>Email:</strong> <a href="mailto:dockmetrix@dockwarelabs.com">dockmetrix@dockwarelabs.com</a>
   </p>
