Updated PPrivacy Policy

--- a/dockmetrix-utility/privacy-policy/index.html
+++ b/dockmetrix-utility/privacy-policy/index.html
@@ -51,7 +51,7 @@
   <ul>
     <li>To authenticate your login and manage your access</li>
     <li>To provide platform-based access control</li>
-    <li>To maintain trial and subscription validity</li>
+    <li>To maintain access control and verification status for each user profile</li>
     <li>To improve the app’s performance and features</li>
   </ul>
 
@@ -70,9 +70,10 @@
   <h2>6. Account & Access Control</h2>
   <p>Each user is permitted to use the app on one device at a time. If you change your device, you must log out first or contact support to regain access.</p>
 <p>You may also request account deletion by emailing us or using the "Delete Account" option inside the app under Contact Section/Menu.</p>
+<p>No third party login system or registration form is required. Verified Access is granted to verified users only by the app administrators for initial users they can register but need verification strictly to retain access.</p>
 
 <h2>7. Data Retention</h2>
-  <p>We retain your account information for as long as your subscription is active or until you request account deletion.</p>
+  <p>We retain your account information for as long as your access is active and/or verified or until you request account deletion.</p>
 
 
   <h2>8. Sharing Functionality</h2>
