--- a/dockmetrix-utility/privacy-policy/index.html
+++ b/dockmetrix-utility/privacy-policy/index.html
@@ -38,7 +38,9 @@
 
   <p>This Privacy Policy describes how DockWare Labs collects, uses, and protects the personal information you provide when using the DockMetrix Utility mobile application.</p>
 
-  <h2>1. Information We Collect</h2>
+<h3>All registrations are granted temporary access for up to 7 days. During this period, users may request verification from our team to continue unrestricted access. No charges or purchases are involved at any stage.”</h3>  
+
+<h2>1. Information We Collect</h2>
   <ul>
     <li>Mobile Number</li>
     <li>Device ID (used for device-based access control)</li>
