--- a/dockmetrix-utility/delete-account.html
+++ b/dockmetrix-utility/delete-account.html
@@ -1,16 +1,80 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><html lang="en">
 <head>
-  <title>Delete Account Request - DockMetrix</title>
-  <meta charset="UTF-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Delete Your DockMetrix Account</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            padding: 40px;
+            color: #333;
+        }
+        .container {
+            max-width: 600px;
+            margin: auto;
+            background: #fff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h2 {
+            color: #1a1a1a;
+            text-align: center;
+        }
+        label {
+            display: block;
+            margin-top: 20px;
+        }
+        input[type="text"], input[type="email"], textarea {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            margin-top: 25px;
+            width: 100%;
+            padding: 12px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        .note {
+            font-size: 14px;
+            color: #555;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
-  <h2>Delete Your DockMetrix Account</h2>
-  <p>
-    If you want to delete your DockMetrix account and associated data,
-    please email us mentioning your registered mobile number at:
-  </p>
-  <p><strong>dockmetrix@dockwarelabs.com</strong></p>
-  <p>We will verify and process your request within 7 working days.</p>
+    <div class="container">
+        <h2>Delete Your DockMetrix - Utility Account</h2>
+        <form action="https://formspree.io/f/mvgqzbza" method="POST">
+            <label for="email">Registered Account Name</label>
+            <input type="email" id="email" name="email" required><label for="phone">Registered Mobile Number</label>
+        <input type="text" id="phone" name="phone" required>
+
+        <label for="reason">Reason for Deletion (Optional)</label>
+        <textarea id="reason" name="reason" rows="4"></textarea>
+
+        <label>
+            <input type="checkbox" name="confirm" required>
+            I confirm that I want to permanently delete my DockMetrix - Utility account and all associated data.
+        </label>
+
+        <button type="submit">Submit Deletion Request</button>
+
+        <p class="note">* Your request will be processed within 7 working days after verification.</p>
+    </form>
+</div>
+
 </body>
 </html>
